--- a/react-ui/src/components/css/adminAcount.css
+++ b/react-ui/src/components/css/adminAcount.css
@@ -1,3 +1,6 @@
+/* css for admin account pages
+displays event cards, live events, etc etc */
+
 /* COLOR SCHEME: 
 1. Text Colors: SMOKEY BLACK: #0C120C
 2. Highlight Color (such as button hover): SEA FOAM GREEN: #BBE1C3
@@ -5,14 +8,3 @@
     A. NICKEL: #6D7275
     B. LIGHT GREY: #C7D6D5
 4. Page Background Color: ANTI-FLASH-WHITE: #ECEBF3 */
-
-.App {
-	text-align: center;
-	background-color: white;
-	width: 100%;
-	height: 1024px;
-}
-
-.App-intro {
-	font-size: large;
-}
