--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -81,14 +81,10 @@ label, name {
 #new-user-phone {
   display: flex;
   width: 30%;
- /* margin-right: 17.1%; */
-  justify-content:flex-end;
 }
-#new-user-password {
+.new-user-password {
   display: flex;
   width: 26.66666667%;
-  /* margin-right: 19.9%; */
-  justify-content: flex-end;
 }
 #new-user-emails {
   display: flex;
@@ -109,4 +105,19 @@ label, name {
 #new-user-email {
  /* margin-right: 17%; */
   width: 33%;
+}
+.checkbox {
+  display: inline;
+}
+.new-user-action-button {
+  display: flex;
+  font-size: 24pt;
+}
+#new-user-form {
+  margin-top: 40px;
+}
+#new-user-contacted {
+ display: flex;
+ justify-content: center;
+ margin-top: 50px;
 }
