signup page fixed

--- a/react-ui/src/components/css/userSettings.css
+++ b/react-ui/src/components/css/userSettings.css
@@ -1,2 +1,2 @@
-
-@import './userSettings.css'
+/* this is the CSS for the edit account form.  
+User requesting to change password, email, phone, or notification settings.  */
