--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -7,9 +7,9 @@
 4. Page Background Color: ANTI-FLASH-WHITE: #ECEBF3 */
 
 .App {
-	text-align: center;
+	/* text-align: center; */
 	background-color: white;
-	width: 100%;
+	/* width: 100%; */
 	height: 1024px;
 }
 
