--- a/react-ui/src/components/css/home.css
+++ b/react-ui/src/components/css/home.css
@@ -17,7 +17,77 @@
 }
 
 .carousel {
-	transform: scale(0.5);
+	align-self: center;
+	justify-content: center;
+	transform: scale(1);
+}
+
+.icon-cards {
+	position: relative;
+	align-self: center;
+	justify-content: center;
+	top: 50%;
+	left: 50%;
+	width: 300px;
+	height: 300px;
+	perspective: 1300px;
+	transform: translate(-50%, -50%);
+}
+.icon-cards__content {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	transform-style: preserve-3d;
+	transform: translateZ(-300px) rotateY(0);
+	animation: carousel 10s infinite cubic-bezier(1, 0.015, 0.295, 1.225) forwards;
+}
+.icon-cards__item {
+	position: absolute;
+	top: 50%;
+	left: 0;
+	width: 400px;
+	height: 400px;
+	border-radius: 6px;
+}
+.icon-cards__item:nth-child(1) {
+	background: url('./images/drill_squad.jpg') no-repeat;
+	height: 336px;
+	width: 520px;
+	transform: rotateY(0) translateZ(300px);
+}
+.icon-cards__item:nth-child(2) {
+	background: url('./images/swimmers.jpg') no-repeat;
+	height: 336px;
+	width: 448px;
+	transform: rotateY(120deg) translateZ(300px);
+}
+.icon-cards__item:nth-child(3) {
+	background: url('./images/track.jpg') no-repeat;
+	height: 336px;
+	width: 448px;
+	transform: rotateY(240deg) translateZ(300px);
+}
+
+@keyframes carousel {
+	0%,
+	17.5% {
+		transform: translateZ(-182px) rotateY(0);
+	}
+	27.5%,
+	45% {
+		transform: translateZ(-182px) rotateY(-120deg);
+	}
+	55%,
+	72.5% {
+		transform: translateZ(-182px) rotateY(-240deg);
+	}
+	82.5%,
+	100% {
+		transform: translateZ(-182px) rotateY(-360deg);
+	}
+}
+body {
+	background: white;
 }
 
 .home_text {
@@ -52,3 +122,16 @@
 	color: #0c120c;
 	background-color: #bbe1c3;
 }
+
+/* .icon-cards__item:nth-child(1) {
+	background: rgba(252, 192, 77, 0.9);
+	transform: rotateY(0) translateZ(182px);
+}
+.icon-cards__item:nth-child(2) {
+	background: rgba(49, 192, 204, 0.9);
+	transform: rotateY(120deg) translateZ(182px);
+}
+.icon-cards__item:nth-child(3) {
+	background: rgba(236, 233, 242, 0.9);
+	transform: rotateY(240deg) translateZ(182px);
+} */
