--- a/react-ui/src/components/css/Register.css
+++ b/react-ui/src/components/css/Register.css
@@ -23,15 +23,17 @@
 
 .inputText {
 	color: black;
-	width: 100%;
+	width: 25%;
 	text-justify: center;
 }
 
 .contact-text {
-	align-self: center;
-	justify-content: center;
+	text-align: center;
+	vertical-align: center;
+	line-height: 15px;
+	padding: 5px;
 	color: black;
-	width: 100%;
+	/* width: 50%; */
 }
 
 #text-preference {
