--- a/react-ui/src/components/css/events.css
+++ b/react-ui/src/components/css/events.css
@@ -43,8 +43,45 @@
   }
 } */
 
-.eventCard {
+.wrapper {
+  margin: 20px;
+}
+
+.page-body {
+  margin: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.eventCard--Container {
   border: 1px solid black;
-  width:400px;
-  height:400px;
+  width:300px;
+  height:300px;
+  margin: 10px;
+}
+
+.eventCard--Title {
+  text-align:center;
+}
+
+.newEventCard--Container {
+  border: 1px solid black;
+  width:300px;
+  height:300px;
+  margin: 10px;
+}
+
+.newEventCard--Title {
+  text-align:center;
+}
+
+.newEventCard--Body {
+  text-align:center;
+  vertical-align: middle;
+  margin-top:80px;
+}
+
+.addEvent-PlusIcon {
+  
 }
