--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -10,11 +10,11 @@
 	/* text-align: center; */
 	background-color: white;
 	/* width: 100%; */
-	height: 1024px;
+	/* height: 1024px; */
 }
 
 .App--Body {
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	/* display: flex; */
 }
 
