--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -10,7 +10,8 @@
 	/* text-align: center; */
 	background-color: white;
 	/* width: 100%; */
-	/* height: 1024px; */
+	height: 100vh;
+	background-color: #607d8b;
 }
 
 .App--Body {
