--- a/react-ui/src/components/css/home.css
+++ b/react-ui/src/components/css/home.css
@@ -1,29 +1,42 @@
-.home {
+.home--container {
   display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
-.home_text {
-  text-align: center;
-  line-height: 1.28571429em;
-  font-weight: bold;
+.home--landing_container {
+  background-color: rgb(218, 219, 218);
+  display: flex;
+  margin-top: 30px;
+  flex-direction: column;
+	align-items: center;
+  /* justify-content: center; */
+  height: 20em;
+  width: 35em;
+  /* border-radius: 4px; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.home_text h1 {
+h1 {
   margin-bottom: 0;
-  margin-top: 3em;
+  margin-top: 1.2em;
   line-height: 1.28571429em;
   font-size: 4em;
   font-weight: bold;
- 
+  text-align: center;
 }
 
-.home_text h2 {
-  font-size: 1.7em;
+h2 {
+  font-size: 1.3em;
   margin-top: 1.5em;
   line-height: 1.28571429em;
   font-weight: bold;
+  text-align: center;
 }
+
+.home--button {
+  margin-top: 4.7em;
+  border-radius:1em;
+}
+
