--- a/react-ui/src/components/css/login.css
+++ b/react-ui/src/components/css/login.css
@@ -6,30 +6,18 @@
 }
 
 .login--form_container {
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(218, 219, 218);
   display: flex;
   flex-direction: column;
 	align-items: center;
   /* justify-content: center; */
   height: 25em;
   width: 25em;
-  border-radius: 4px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .login--form {
-  margin-top: 50px;
-  justify-content: center;
-  text-align: center;
-  width:50%;
-}
-
-.login--form button {
-  width: 100%;
-  border-radius: 5px;
-  background-color: green;
-  color: white;
-  height: 35px;
+  margin-top: 20%;
 }
 
 .login--form_field {
@@ -40,13 +28,19 @@
   height: 35px;
 }
 
-.login--icon {
-  background: url('./images/stage.svg') no-repeat;
-  background-size: contain;
-  background-position: center;
-  background-color: green;
+.login--icon_container {
+  background-color: rgb(56, 193, 63);
   height: 100px;
   width: 100px;
   border-radius: 100%;
   margin-top: 50px;
+}
+
+.login--icon {
+  background: url('./images/stage.svg') no-repeat;
+  height: 100px;
+  width: 100px;
+  margin-top: .5em;
+  background-position: center;
+
 }
