--- a/react-ui/src/components/css/home.css
+++ b/react-ui/src/components/css/home.css
@@ -12,10 +12,12 @@
   flex-direction: column;
 	align-items: center;
   /* justify-content: center; */
-  height: 20em;
+  
   width: 35em;
   /* border-radius: 4px; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+  padding-bottom: 6%;
 }
 
 h1 {
@@ -36,7 +38,6 @@ h2 {
 }
 
 .home--button {
-  margin-top: 4.7em;
-  border-radius:1em;
+  margin-top: 20%;
 }
 
