--- a/react-ui/src/components/css/login.css
+++ b/react-ui/src/components/css/login.css
@@ -11,13 +11,13 @@
   flex-direction: column;
 	align-items: center;
   /* justify-content: center; */
-  height: 25em;
   width: 25em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .login--form {
-  margin-top: 20%;
+  margin-top: 5%;
+  margin-bottom: 15%;
 }
 
 .login--form_field {
@@ -28,19 +28,16 @@
   height: 35px;
 }
 
-.login--icon_container {
+.login--button {
+  width: 100%;
   background-color: rgb(56, 193, 63);
-  height: 100px;
-  width: 100px;
-  border-radius: 100%;
-  margin-top: 50px;
+  color: white;
 }
 
-.login--icon {
-  background: url('./images/stage.svg') no-repeat;
-  height: 100px;
-  width: 100px;
-  margin-top: .5em;
-  background-position: center;
-
+.login--box_navbar {
+  background-color: #1faa00;
+  width: 100%;
+  height: 10%;
+  justify-content: center;
+  box-shadow: none;
 }
