--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -5,12 +5,12 @@
     A. NICKEL: #6D7275
     B. LIGHT GREY: #C7D6D5
 4. Page Background Color: ANTI-FLASH-WHITE: #ECEBF3 */
-
 /* body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
 	height: 100vh;
+	background-color: green;
 } */
 /* 
 .new-user-label {
