CSS Fix for events details

--- a/react-ui/src/components/css/eventDetail.css
+++ b/react-ui/src/components/css/eventDetail.css
@@ -52,7 +52,6 @@ display: none;
 .eventDetail--form_container:nth-child(1) {
   background-color: rgb(218, 219, 218);
   align-items: center;
-  width: 35em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -80,7 +79,8 @@ display: none;
 .eventDetail--return_button_container {
   display: flex;
   justify-content: center;
-  margin-top: 40px;
+  margin-top: 80px;
+  margin-bottom: 20px;
 }
 
 .eventDetail--return_button_container button {
