--- a/react-ui/src/components/css/register.css
+++ b/react-ui/src/components/css/register.css
@@ -69,7 +69,7 @@
 .register--box_navbar {
   background-color: #1faa00;
   width: 100%;
-  height: 10%;
+  height: 30px;
   justify-content: center;
   box-shadow: none;
 }
