--- a/react-ui/src/components/css/events.css
+++ b/react-ui/src/components/css/events.css
@@ -18,10 +18,19 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.eventCard--Container_add {
+  width: 300px;
+  height: 150px;
+  margin-left: 20px;
+  background-color: rgb(218, 219, 218);
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .eventCard--Body {
   text-align: center;
   vertical-align: middle;
-  margin-top: 80px;
+  margin-top: 20px;
 }
 
 .eventCard-PlusIcon {
@@ -30,7 +39,7 @@
 .eventCard--box_navbar {
   background-color: #1faa00;
   width: 100%;
-  height: 10%;
+  height: 30px;
   justify-content: center;
   box-shadow: none;
 }
