--- a/react-ui/src/components/css/login.css
+++ b/react-ui/src/components/css/login.css
@@ -37,7 +37,7 @@
 .login--box_navbar {
   background-color: #1faa00;
   width: 100%;
-  height: 10%;
+  height: 30px;
   justify-content: center;
   box-shadow: none;
 }
