CSS and logged in settings

--- a/react-ui/src/components/css/login.css
+++ b/react-ui/src/components/css/login.css
@@ -16,7 +16,8 @@
 
 .login--form {
   margin-top: 5%;
-  margin-bottom: 15%;
+  margin-bottom: 10%;
+  text-align: center;
 }
 
 .login--form_field {
