Only show payment box if admin

--- a/react-ui/src/components/css/subscriberBox.css
+++ b/react-ui/src/components/css/subscriberBox.css
@@ -24,7 +24,7 @@
 
 .subscriberBox--form_container form button {
   margin-top: 10px;
-  width: 13%;
+  width: 100px;
   background-color: rgb(56, 193, 63);
 }
 
