persist non-owner events, restore line-through on complete

--- a/react-ui/src/components/css/eventDetail.css
+++ b/react-ui/src/components/css/eventDetail.css
@@ -2,9 +2,12 @@
   width: 21px;
   height: 21px;
 }
-/* .line-through {
-  text-decoration: line-through;
+/* .name {
+  width: "60px";
 } */
+.lineThrough {
+  text-decoration: line-through;
+}
 /*
 
 #competedGroup {
