--- a/react-ui/src/components/css/userSettings.css
+++ b/react-ui/src/components/css/userSettings.css
@@ -1,6 +1,9 @@
 /* this is the CSS for the edit account form.  
 User requesting to change password, email, phone, or notification settings.  */
 
+
+@import "./register.css";
+
 .userSettings--container {
   display: flex;
   flex-direction: column;
@@ -54,3 +57,4 @@ User requesting to change password, email, phone, or notification settings.  */
 	background-color: #a30000;
 	color: white;
 }
+
